tests/rosetta/out/C/bitmap-flood-fill.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:53Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static list_int ff_grid;
static const char *ff_repl;
static const char *ff_target;
int ff(int px, int py) {
  if (px < 0 || py < 0 || py >= ff_grid.len || px >= ff_grid.data[0].len) {
    return;
  }
  if (ff_grid.data[py].data[px] != ff_target) {
    return;
  }
  grid.data[py].data[px] = ff_repl;
  ff(px - 1, py);
  ff(px + 1, py);
  ff(px, py - 1);
  ff(px, py + 1);
}

int flood(int x, int y, char *repl) {
  const char *target = grid.data[y].data[x];
  if ((strcmp(target, repl) == 0)) {
    return;
  }
  (ff_grid = grid, ff_repl = repl, ff_target = target, ff(x, y));
}

int main() {
  list_string grid = list_string_create(5);
  grid.data[0] = ".";
  grid.data[1] = ".";
  grid.data[2] = ".";
  grid.data[3] = ".";
  grid.data[4] = ".";
  list_string grid = list_string_create(5);
  grid.data[0] = ".";
  grid.data[1] = "#";
  grid.data[2] = "#";
  grid.data[3] = "#";
  grid.data[4] = ".";
  list_string grid = list_string_create(5);
  grid.data[0] = ".";
  grid.data[1] = "#";
  grid.data[2] = ".";
  grid.data[3] = "#";
  grid.data[4] = ".";
  list_string grid = list_string_create(5);
  grid.data[0] = ".";
  grid.data[1] = "#";
  grid.data[2] = "#";
  grid.data[3] = "#";
  grid.data[4] = ".";
  list_string grid = list_string_create(5);
  grid.data[0] = ".";
  grid.data[1] = ".";
  grid.data[2] = ".";
  grid.data[3] = ".";
  grid.data[4] = ".";
  list_int grid_data[] = {grid, grid, grid, grid, grid};
  list_list_int grid = {5, grid_data};
  list_int grid = grid;
  flood(2, 2, "o");
  for (int tmp1 = 0; tmp1 < grid.len; tmp1++) {
    int row = grid.data[tmp1];
    const char *line = "";
    for (int tmp2 = 0; tmp2 < row.len; tmp2++) {
      char *ch = row.data[tmp2];
      char *tmp3 = concat_string(line, ch);
      line = tmp3;
    }
    printf("%s\n", line);
  }
  return 0;
}
